[package]
name = "unlocked-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
lazy_static = "1.5.0"
lettre = "0.10.4"
local-ip-address = "0.6.2"
lock = "0.1.0"
native-dialog = "0.7.0"
rpassword = "7.3.1"
whoami = "1.5.1"
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}
